[package]
name = "bandwidth-prepay-api"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bincode = "1.1.3"
serde = "1.0.91"
serde_derive = "1.0.91"
solana-sdk = "0.18.0"

[dev-dependencies]
solana-runtime = "0.18.0"

[lib]
name = "bandwidth_prepay_api"
crate-type = ["lib"]
