[package]
name = "bandwidth-tps"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
clap = "2.33.0"
env_logger = "0.6.1"
gatekeeper = { path = "../gatekeeper", version = "0.2.0" }
log = "0.4.6"
pubsub-client = { path = "../pubsub-client", version = "0.2.0" }
rand = "0.6.5"
rand_chacha = "0.1.1"
rayon = "1.0.3"
solana-client = "0.18.0"
solana-drone = "0.18.0"
solana-logger = "0.18.0"
solana-sdk = "0.18.0"

[dev-dependencies]
solana-runtime = "0.18.0"
