[package]
name = "client"
version = "0.2.0"
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"

[dependencies]
bandwidth-prepay-api = { path = "../bandwidth-prepay-api", version = "0.2.0" }
bincode = "1.1.3"
bs58 = "0.2.2"
log = "0.4.6"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
solana-client = "0.18.0"
solana-drone = "0.18.0"
solana-sdk = "0.18.0"
